//syntax = "proto2";
package prototype;

option java_package = "com.skplanet.storeplatform.sac.client.user.vo";

message MyPagePurchase {

	optional int32 id = 1;
	optional string pid = 2;
	optional string userId = 3;
	optional string purchaseId = 4;
	optional string payId = 5;
	optional double num = 6;
}
